# common-core

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  LICENSE.txt  Makefile  README.md  defaults.cmake  defaults.json
src/: .clang-format  CMakeLists.txt  README.md
src/apps/: CMakeLists.txt
src/apps/demo/: CMakeLists.txt  README.md
src/apps/demo/cpp/: CMakeLists.txt  README.md
src/apps/demo/idl/: CMakeLists.txt  README.md  demo-interface.idl  demo-types.idl
src/apps/demo/proto/: CMakeLists.txt  demo_service.proto  demo_types.proto
src/apps/demo/protodefs/: CMakeLists.txt
src/apps/demo/python/: CMakeLists.txt  demo-grpc-server.py  demo_client.py  demo_grpc_client.py  demo_zmq_client.py
src/apps/demo/settings/: CMakeLists.txt  demo-dds-tool.json  demo-tool.json  demoserver.json  zmq-endpoints-demoproduct.json
src/core/: CMakeLists.txt  README.md
src/core/cpp/: CMakeLists.txt  README.md
src/core/cpp/inner-core/: CMakeLists.txt  README.md
src/core/cpp/outer-core/: CMakeLists.txt
src/core/idl/: CMakeLists.txt  common-types.idl  event-types.idl  variant-types.idl
src/core/proto/: CMakeLists.txt  datetime.proto  event_types.proto  quantities.proto  request_reply.proto  signal.proto  signal_types.proto  status.proto  variant.proto  version.proto
src/core/python/: CMakeLists.txt  README.md  __init__.py.in  buildinfo.py.in
src/core/python/core/: decorators.py  doc_inherit.py  duration.py  enumeration.py  ini_reader.py  invocation.py  jsonreader.py  logbase.py  paths.py  roundrobin.py  scalar_types.py  scheduler.py  settingsstore.py  signal_slot.py  stringexpander.py  timeinterval.py  timepoint.py  timestamp.py  timeutil.py
src/core/python/protobuf/: __init__.py  builder.py  datetime.py  import_proto.py  rr.py  signal.py  signalstore.py  status.py  utils.py  variant.py  version.py  wellknown.py
src/core/settings/: CMakeLists.txt  daemon-defaults.yaml  dds-endpoints-common.json  dds-endpoints-common.yaml  defaults.json  defaults.yaml  grpc-endpoints-common.json  grpc-endpoints-common.yaml  kafka-endpoints-common.yaml  rest-endpoints-common.yaml  vfs.json  zmq-endpoints-common.yaml
src/crust/: CMakeLists.txt
src/crust/common/: CMakeLists.txt
src/crust/common/settings/: CMakeLists.txt  grpc-endpoints-common.json  rest-services-common.json  zmq-endpoints-common.json
src/crust/demoproduct/settings/: zmq-endpoints-demoproduct.json
src/crust/demoproduct/shell/: CMakeLists.txt
src/mantle/: CMakeLists.txt
src/mantle/demo/: CMakeLists.txt  README.md
src/mantle/demo/cpp/: CMakeLists.txt  README.md
src/mantle/demo/idl/: CMakeLists.txt  README.md  demo-interface.idl  demo-types.idl
src/mantle/demo/proto/: CMakeLists.txt  demo.proto  demo_service.proto  demo_types.proto
src/mantle/demo/python/: CMakeLists.txt  demo-grpc-async-client.py  demo-grpc-async-server.py  demo-grpc-server.py  demo-zmq-server.py  shell.py  starthook.py
src/mantle/demo/scripts/: CMakeLists.txt
src/mantle/demo/settings/: CMakeLists.txt  demo-dds-tool.yaml  demo-grpc-tool.json  demo-grpc-tool.yaml  demo-zmq-tool.yaml  demoserver.json  demoserver.yaml
src/mantle/logger/: CMakeLists.txt
src/mantle/logger/cpp/: CMakeLists.txt
src/mantle/logger/proto/: CMakeLists.txt  logger.proto
src/mantle/logger/python/: CMakeLists.txt
src/mantle/logger/settings/: CMakeLists.txt  logserver.json  logserver.yaml
src/mantle/multilogger/: CMakeLists.txt
src/mantle/multilogger/cpp/: CMakeLists.txt
src/mantle/multilogger/proto/: CMakeLists.txt  multilogger.proto
src/mantle/multilogger/python/: CMakeLists.txt
src/mantle/multilogger/settings/: CMakeLists.txt  multilogger.yaml
src/mantle/platform/: CMakeLists.txt
src/mantle/platform/cpp/: CMakeLists.txt
src/mantle/platform/proto/: CMakeLists.txt  netconfig.proto  network.proto  sysconfig.proto  system.proto  upgrade.proto  vfs.proto
src/mantle/platform/python/: CMakeLists.txt  platform_shell.py  shell.py
src/mantle/platform/scripts/: CMakeLists.txt
src/mantle/platform/settings/: CMakeLists.txt  timezones.json  timezones.yaml  upgrade.json.in  upgrade.yaml.in  vfs.json  vfs.yaml
src/mantle/pubsub/: CMakeLists.txt
src/mantle/pubsub/cpp/: CMakeLists.txt
src/mantle/pubsub/proto/: CMakeLists.txt
src/mantle/pubsub/python/: CMakeLists.txt
src/mantle/relay/: CMakeLists.txt
src/mantle/relay/cpp/: CMakeLists.txt
src/mantle/relay/proto/: CMakeLists.txt
src/mantle/relay/settings/: CMakeLists.txt
src/mantle/switchboard/: CMakeLists.txt
src/mantle/switchboard/cpp/: CMakeLists.txt
src/mantle/switchboard/idl/: CMakeLists.txt  switchboard-interface.idl  switchboard-types.idl
src/mantle/switchboard/proto/: CMakeLists.txt  switchboard.proto
src/mantle/switchboard/python/: CMakeLists.txt
src/mantle/switchboard/settings/: CMakeLists.txt  common-switches.yaml  switchboard.yaml  switchboard.yaml.in
src/products/: CMakeLists.txt
src/products/common/: CMakeLists.txt
src/products/common/settings/: common-services.json  grpc-endpoints-common.json  grpc-services-common.json  rest-services-common.json  zmq-channels-common.json  zmq-endpoints-common.json
src/products/common/shell/: CMakeLists.txt
src/products/demoproduct/: CMakeLists.txt
src/products/demoproduct/settings/: CMakeLists.txt  grpc-services-demoproduct.json  (+1 more)
src/shared/: CMakeLists.txt
src/shared/cpp/: CMakeLists.txt
src/shared/idl/: CMakeLists.txt  common-types.idl  event-types.idl  variant-types.idl
src/shared/proto/: CMakeLists.txt  event_types.proto  signal_types.proto  variant_types.proto
src/shared/python/: CMakeLists.txt  README.md  buildinfo.py.in  container.py  dds_base.py  dds_listener.py  grpc_base.py  grpc_client.py  grpc_server.py  grpc_signalclient.py  jsonreader.py  protobuf_custom_types.py  safe_invoke.py  scalar_types.py  settingsstore.py
src/shared/settings/: defaults.json
src/tests/: CMakeLists.txt
tests/: CMakeLists.txt
tests/one-offs/: CMakeLists.txt
tests/one-offs/dt-parser/: CMakeLists.txt
tests/one-offs/json-parser/: CMakeLists.txt
tests/one-offs/rest-tool/: CMakeLists.txt
(+2428 files in other folders)
